[package]
name = "shared_http_body"
version = "0.1.5"
edition = "2021"
authors = ["Ankur Mittal"]
license = "Apache-2.0"
description = "A library for creating shareable HTTP bodies that can be cloned and consumed by multiple consumers"
readme = "README.md"
repository = "https://github.com/ankurmittal/shared-http-body-rs"
documentation = "https://docs.rs/shared_http_body"
keywords = ["http", "body", "async", "clone", "shared"]
categories = ["asynchronous", "web-programming"]

[features]
# Optional runtime stats (active clone counts). Disabled by default.
stats = []
default = []

[package.metadata.docs.rs]
features = ["stats"]
exclude = ["target/", ".git/", ".gitignore"]

[dependencies]
futures-util = "0.3"
http-body = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
tokio-test = "0.4"
static_assertions = "1"
http-body-util = "0.1"
bytes = "1"
